<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/fondo_background"
        tools:context=".MainActivity">

        <ImageButton
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_logout_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/bienvenida"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:layout_marginEnd="16dp"/>


        <TextView
        android:id="@+id/bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#612828"
        android:textSize="45sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/logo2_background"
        app:layout_constraintTop_toBottomOf="@id/bienvenida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp" />


    <TextView
        android:id="@+id/idEvent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/idEventDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/idEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/idEventOrganization"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/organization"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/idEventDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/idEventPlace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/idEventOrganization"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/idEventParticipation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/participation"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/idEventPlace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/idAboutUs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aboutUs"
        android:textColor="#612828"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/idEventParticipation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/idAboutDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aboutDetails"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/idAboutUs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="68dp"
        android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnPatrocinador"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="48dp"
            android:text="@string/btn_sponsors"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idAboutDetails"
            app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>